<?xml version="1.0" encoding="utf-8"?>
<!-- REQUIRED STATEMENT: ChatGPT did the comments for this file -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Switch to enable development mode -->
    <androidx.appcompat.widget.SwitchCompat
        android:visibility="visible"
        android:id="@+id/devModeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_mode"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:checked="false"/> <!-- Default state is off -->

    <!-- TextView to display the elapsed time -->
    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_below="@id/devModeSwitch"
        android:layout_height="wrap_content"
        android:text="@string/elapsed_time"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <!-- TextView to display location information -->
    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_info_will_appear_here"
        android:textSize="20sp"
        android:layout_below="@id/timerTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <!-- TextView to display the user's speed -->
    <TextView
        android:id="@+id/speedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed_info_will_appear_here"
        android:textSize="40sp"
        android:layout_below="@id/locationTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <!-- SeekBar to allow the user to adjust the font size of the speed display -->
    <SeekBar
        android:id="@+id/fontSizeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="85"
        android:progress="40"
        android:layout_below="@id/speedTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <!-- Button to toggle between different speed units (e.g., km/h to m/s) -->
    <Button
        android:id="@+id/unitToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_to_m_s"
        android:layout_below="@id/fontSizeSeekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <!-- Button to reset the SeekBar and font size to default values -->
    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_below="@id/unitToggleButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <!-- Button to pause/resume speed tracking -->
    <Button
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:layout_below="@id/resetButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <!-- Button to open a help dialog or activity -->
    <Button
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:layout_below="@id/pauseButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>
